Add CfP for Go & Debugging Tools

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -23,13 +23,13 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2017-October/002610.html
         deadline: 2017-11-27
     'Debugging Tools':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2017-October/002620.html 
+        deadline: 2017-12-01
     'Free Java':
         ann: 
         deadline: 
     'Go':
-        ann: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2017-October/002617.html
         deadline: 
     'Graph Processing':
         ann: 
