--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -32,8 +32,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2017-October/002617.html
         deadline: 
     'Graph Processing':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2017-October/002639.html
+        deadline: 2017-11-26
     'Graphics':
         ann: 
         deadline: 
