devrooms: add Mozilla CfP

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -47,8 +47,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2017-October/002631.html
         deadline: 2017-11-26
     'Mozilla':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2017-November/002653.html
+        deadline: 2017-12-06
     'Open Document Editors':
         ann: https://lists.fosdem.org/pipermail/fosdem/2017-October/002650.html 
         deadline: 2017-12-04
