--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -109,8 +109,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2017-October/002628.html
         deadline: 2017-12-01
     'Perl':
-        ann: 
-        deadline: 
+        ann: https://wendyga.wordpress.com/2017/09/19/fosdem-03-04-february-2018-brussels-belgium-call-for-speakers/
+        deadline: 2017-12-15
     'Real Time Communications':
         ann: https://lists.fosdem.org/pipermail/fosdem/2017-October/002636.html
         deadline: 2017-11-30
