devrooms: add Tool the Docs CfP

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -130,5 +130,5 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2017-October/002629.html
         deadline: 2017-12-01
     'Tool the Docs':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2017-November/002655.html
+        deadline: 2017-12-12
