devrooms: add Graphics CfP

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -35,8 +35,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2017-October/002639.html
         deadline: 2017-11-26
     'Graphics':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2017-November/002657.html
+        deadline: 2017-11-26
     'Identity and Access Management':
         ann: https://lists.fosdem.org/pipermail/fosdem/2017-October/002607.html
         deadline: 2017-11-26
