keysigning: Now accepting submissions

--- a/config.yaml
+++ b/config.yaml
@@ -173,7 +173,7 @@ keysigning:
   submission_deadline: 2018-01-24
   homework_due: 2018-04-30
   # Change these when the submission window opens/closes.
-  submission_notyet: true
+  submission_notyet: false
   submission_closed: false
   # Change this when the list of keys is published.
   list_published: false
