--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -41,6 +41,14 @@ events:
         registration: Website
         website: http://grimoirelab.github.io/con
         contact: jsmanrique@bitergia.com
+    'pre-FOSDEM MySQL Days':
+        location: Brussels
+        start: 2018-02-02
+        end: 2018-02-02
+        cost: Free
+        registration: Website
+        website: https://www.eventbrite.com/e/pre-fosdem-mysql-day-2018-tickets-40779231780
+        contact: frederic.descamps@oracle.com
     'Bytenight Party':
         location: Brussels
         start: 2018-02-03
