--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -57,6 +57,14 @@ events:
         registration: Website
         website: https://www.eventbrite.com/e/pre-fosdem-mysql-day-2018-tickets-40779231780
         contact: frederic.descamps@oracle.com
+    'Automotive Evening':
+        location: Brussels
+        start: 2018-02-03
+        end: 2018-02-03
+        cost: Dinner
+        registration: Required (deadline 2018-01-25)
+        website: https://wiki.automotivelinux.org/fosdem#community_dinner
+        contact: dl9pf@gmx.de
     'Bytenight Party':
         location: Brussels
         start: 2018-02-03
