--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -17,6 +17,14 @@ events:
         registration: None (wiki)
         website: http://zeromq.org/event:zeromq-pre-fosdem-hackaton-thu-1-fri-2-feb-2018
         contact: zeromq-dev@lists.zeromq.org
+    'CentOS Dojo Brussels':
+        location: Brussels
+        start: 2018-02-02
+        end: 2018-02-02
+        cost: Free
+        registration: None
+        website: https://wiki.centos.org/Events/Dojo/Brussels2018
+        contact: rbowen@redhat.com
     'FOSDEM PGDay 2018':
         location: Brussels
         start: 2018-02-02
