--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -81,6 +81,14 @@ events:
         registration: None
         website: https://hsbxl.be/Bytenight_2018
         contact: zoobab@gmail.com
+    'Buildroot Developers Days':
+        location: Brussels
+        start: 2018-02-05
+        end: 2018-02-06
+        cost: Free
+        registration: Required (deadline 2018-01-31)
+        website: https://elinux.org/Buildroot:DeveloperDaysFOSDEM2018
+        contact: yann.morin.1998@free.fr
     'CfgMgmtCamp 2018':
         location: Ghent
         start: 2018-02-05
