--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -24,6 +24,7 @@ footer:
     - /stands
     - /certification
     - /keysigning
+    - /volunteer
     - /fringe
   - Practical information:
     - Getting there: /practical/transportation
