--- a/config.yaml
+++ b/config.yaml
@@ -174,7 +174,7 @@ keysigning:
   homework_due: 2018-04-30
   # Change these when the submission window opens/closes.
   submission_notyet: false
-  submission_closed: false
+  submission_closed: true
   # Change this when the list of keys is published.
   list_published: false
 
