navbar: Add link to the Friday beer event

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -25,6 +25,7 @@ footer:
     - /certification
     - /keysigning
     - /volunteer
+    - /beerevent
     - /fringe
   - Practical information:
     - Getting there: /practical/transportation
