--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -89,6 +89,14 @@ events:
         registration: None
         website: https://hsbxl.be/Bytenight_2018
         contact: zoobab@gmail.com
+    'GNOME Beers':
+        location: Brussels
+        start: 2018-02-03
+        end: 2018-02-03
+        cost: Free (but not free beer)
+        registration: None
+        website: https://wiki.gnome.org/Events/FOSDEM/2018/
+        contact: neil@gnome.org
     'Python Dinner':
         location: Brussels
         start: 2018-02-03
@@ -97,6 +105,14 @@ events:
         registration: Required (deadline 2018-01-31)
         website: https://ti.to/python-dinner-fosdem/2018
         contact: hello@hugoherter.con
+    'Ubuntu Community Get Together':
+        location: Brussels
+        start: 2018-02-03
+        end: 2018-02-04
+        cost: Free
+        registration: Coordinate on the Telegram group
+        website: https://gettogether.community/events/6/saturday-dinner-at-fosdem/
+        contact: diogoconstantino@ubuntu-pt.org
     'ULYSSIS goes to FOSDEM':
         location: Leuven
         start: 2018-02-03
