--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -1,8 +1,145 @@
 ---
 kind: internal
 days:
-  both:
-
   saturday:
+    '.NET and TypeScript':
+        ann: 
+        deadline: 
+    'Ada':
+        ann: 
+        deadline: 
+    'BSD':
+        ann: 
+        deadline: 
+    'Collaborative Information and Content Management Applications':
+        ann: 
+        deadline: 
+    'Decentralized Internet and Privacy':
+        ann: 
+        deadline: 
+    'Free Java':
+        ann: 
+        deadline: 
+    'Go':
+        ann: 
+        deadline: 
+    'Graph Processing':
+        ann: 
+        deadline: 
+    'Graphics':
+        ann: 
+        deadline: 
+    'Infra Management':
+        ann: 
+        deadline: 
+    'Legal':
+        ann: 
+        deadline: 
+    'Minimalistic Languages':
+        ann: 
+        deadline: 
+    'Mozilla':
+        ann: 
+        deadline: 
+    'MySQL, MariaDB and Friends':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002733.html
+        deadline: 2018-11-15
+    'Open Media':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002736.html
+        deadline: 2018-12-03
+    'Open Source Design':
+        ann: 
+        deadline: 
+    'PHP and Friends':
+        ann: 
+        deadline: 
+    'Quantum Computing':
+        ann: 
+        deadline: 
+    'RISC-V':
+        ann: 
+        deadline: 
+    'Retrocomputing ':
+        ann: 
+        deadline: 
+    'Software Defined Networking':
+        ann: 
+        deadline: 
+    'Tool the Docs ':
+        ann: 
+        deadline: 
+    'Virtualization and IaaS':
+        ann: 
+        deadline: 
 
   sunday:
+    'Blockchain':
+        ann: 
+        deadline: 
+    'CAD and Open Hardware':
+        ann: 
+        deadline: 
+    'Community':
+        ann: 
+        deadline: 
+    'Containers':
+        ann: 
+        deadline: 
+    'DNS':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002739.html
+        deadline: 2018-12-01
+    'Distributions':
+        ann: 
+        deadline: 
+    'Free Software Radio':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002732.html
+        deadline: 2018-12-07
+    'Free Tools and Editors':
+        ann: 
+        deadline: 
+    'Geospatial':
+        ann: 
+        deadline: 
+    'HPC, Big Data and Data Science':
+        ann: 
+        deadline: 
+    'Hardware Enablement':
+        ann: 
+        deadline: 
+    'Javascript':
+        ann: 
+        deadline: 
+    'LLVM':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002737.html
+        deadline: 2018-11-05
+    'Machine Learning on Code':
+        ann: 
+        deadline: 
+    'Microkernels and Component-based OS':
+        ann: 
+        deadline: 
+    'Monitoring and Observability':
+        ann: 
+        deadline: 
+    'PostgreSQL':
+        ann: 
+        deadline: 
+    'Python':
+        ann: 
+        deadline: 
+    'Real Time Communications':
+        ann: 
+        deadline: 
+    'Rust':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002740.html
+        deadline: 2018-11-25
+    'Search':
+        ann: 
+        deadline: 
+    'Security':
+        ann: 
+        deadline: 
+    'Software Defined Storage':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002735.html
+        deadline: 2018-11-25
+
