--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -9,8 +9,8 @@ days:
         ann: 
         deadline: 
     'BSD':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002741.html
+        deadline: 2018-12-10
     'Collaborative Information and Content Management Applications':
         ann: 
         deadline: 
@@ -57,8 +57,8 @@ days:
         ann: 
         deadline: 
     'RISC-V':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002743.html
+        deadline: 2018-11-25
     'Retrocomputing ':
         ann: 
         deadline: 
@@ -116,8 +116,8 @@ days:
         ann: 
         deadline: 
     'Microkernels and Component-based OS':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002742.html
+        deadline: 2018-12-01
     'Monitoring and Observability':
         ann: 
         deadline: 
