--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -77,8 +77,8 @@ days:
         ann: 
         deadline: 
     'CAD and Open Hardware':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002752.html
+        deadline: 2018-12-01
     'Community':
         ann: 
         deadline: 
