--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -36,8 +36,8 @@ days:
         ann: 
         deadline: 
     'Minimalistic Languages':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002760.html
+        deadline: 2018-11-25
     'Mozilla':
         ann: 
         deadline: 
@@ -63,14 +63,14 @@ days:
         ann: 
         deadline: 
     'Software Defined Networking':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002758.html
+        deadline: 2018-11-25
     'Tool the Docs ':
         ann: 
         deadline: 
     'Virtualization and IaaS':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002757.html
+        deadline: 2018-12-01
 
   sunday:
     'Blockchain':
