Add CfP for M&O devroom
Signed-off-by: Richard Hartmann <richih@richih.org>

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -119,8 +119,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002742.html
         deadline: 2018-12-01
     'Monitoring and Observability':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002770.html
+        deadline: 2018-11-26
     'PostgreSQL':
         ann: 
         deadline: 
