devrooms: add Legal CfP

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -33,8 +33,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002744.html
         deadline: 2018-11-20
     'Legal':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002773.html
+        deadline: 2018-11-23
     'Minimalistic Languages':
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002760.html
         deadline: 2018-11-25
