devrooms: add CfP for CMS

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -12,8 +12,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002741.html
         deadline: 2018-12-10
     'Collaborative Information and Content Management Applications':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002774.html
+        deadline: 2018-12-10
     'Decentralized Internet and Privacy':
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002769.html
         deadline: 2018-11-26
