--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -80,8 +80,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002752.html
         deadline: 2018-12-01
     'Community':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002776.html
+        deadline: 2018-11-23
     'Containers':
         ann: 
         deadline: 
