--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -137,8 +137,8 @@ days:
         ann: 
         deadline: 
     'Security':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002777.html
+        deadline: 2018-12-01
     'Software Defined Storage':
         ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002735.html
         deadline: 2018-11-25
