--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -125,8 +125,8 @@ days:
         ann: 
         deadline: 
     'Python':
-        ann: 
-        deadline: 
+        ann: https://lists.fosdem.org/pipermail/fosdem/2018q4/002781.html
+        deadline: 2018-12-01
     'Real Time Communications':
         ann: 
         deadline: 
